# sampex_themis_survey

./: .gitignore  README.md  requirements.txt  setup.cfg
data/: sampex_themis_asi_conjunctions_filtered.csv  sampex_themis_asi_rbsp_aurorax_conjunctions_1000_km.xlsx  sampex_themis_asi_rbsp_aurorax_conjunctions_500_km.xlsx  sampex_themis_asi_themis_aurorax_conjunctions_500_km.xlsx
sampex_themis_survey/: __init__.py  __main__.py  find_conjunctions.py  footprint.py  samepx_themis_asi_summary_movies.py  samepx_themis_themis_asi_summary_movies.py  sampex_themis_asi_summary_plots.py  sampex_themis_themis_asi_summary_plot.py  triple_summary_plot.py
sampex_themis_survey/data/: sampex_themis_asi_conjunctions.csv  sampex_themis_asi_themis_aurorax_conjunctions_500_km_pa.xlsx
sampex_themis_survey/themis/: fbk.py  footprint.py  sst.py
sampex_themis_survey/triple/: summary_plots.py
sampex_themis_survey/triple/20080304/: 20080304_yknf_fsmi_conjunction_map.py  location_inst.py  location_range.py  locations.py
sampex_themis_survey/triple/20120316/: 20120316_kapu_snkq_conjunction_map.py  location_inst.py
themis_data/thd/l1/state/2008/: thd_l1_state_20080304.cdf
