[metadata]
name = sampex_themis_survey
version = 0.0.1
description = 'Analyze the extensive dataset of SAMPEX-THEMIS ASI conjunctions'
long_description = file: README.md 
url='https://https://github.com/mshumko/sampex_themis_survey'
author='M. Shumko'
author_email='msshumko@gmail.com'
long_description_content_type = text/markdown
keywords = Python, SAMPEX, THEMIS, ASI, aurora, magnetosphere, conjunction
python_requires='>=3.0'
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
    numpy
    matplotlib
    pandas
    pyspedas
    sampex
    aurora-asi-lib
    cdflib
    aacgmv2